# Go-Chicken

./: .gitignore  Go_Chicken_Pitch_Deck.pptx  README.md  append.py  create_pitch_deck.py  docker-compose.yml  implementation_plan.md  project_status.md  pyproject.toml  schema.sql  simulate_whatsapp.py  walkthrough.md
backend/: .env.example  check_db.py  check_errors.py  check_invite.py  check_tenants.py  delete_auth_user.py  delete_state.py  delete_user.py  fix.py  fix_out.py  fix_supabase.py  insert_user.py  main.py  patch_d5.py  railway.toml  requirements.txt  reset_user_language.py  test_bot.py  test_db.py  verify_supabase.py
backend/alembic/: env.py
backend/api/: __init__.py
backend/core/: __init__.py  ai_provider.py  analytics_consumers.py  analytics_service.py  auth.py  cloudinary_service.py  communication_consumers.py  communication_providers.py  communication_service.py  communication_templates.py  config.py  conversation_service.py  database.py  event_broadcaster.py  exceptions.py  groq_provider.py  inventory_service.py  khata_consumer.py  khata_service.py  ollama_client.py  order_service.py  order_state_machine.py  outbox_service.py  outbox_worker.py  pricing_service.py  quote_consumers.py  quote_service.py  quote_state_machine.py  truck_service.py  (+1 more)
docs/: ANALYTICS_SERVICE_DESIGN.md  ARCHITECTURE_INDEX.md  COMMUNICATION_SERVICE_DESIGN.md  KHATA_SERVICE_DESIGN.md  N8N_INTEGRATION_GUIDE.md  PRICING_QUOTE_SERVICE_DESIGN.md
frontend/: extract_tabs.py  next.config.mjs  package-lock.json  package.json
workflows/: n8n_whatsapp_orchestration.json
(+176 files in other folders)
